--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.22",
+    "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
@@ -47,7 +48,6 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-video": "^6.16.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
