--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.22",
-    "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
@@ -38,6 +37,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
+    "expo-video": "^2.2.2",
     "expo-web-browser": "~14.2.0",
     "fuse.js": "^7.1.0",
     "react": "19.0.0",
