--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+vendor/
 
 # Expo
 .expo/
@@ -37,3 +38,4 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.phpunit.result.cache
