--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "illuminate/database": "^10.0",
-        "illuminate/events": "^10.0"
+        "illuminate/events": "^10.0",
+        "illuminate/http": "^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
