--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-intent-launcher": "^13.0.7",
     "expo-linking": "~7.1.7",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
