--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-video": "^2.2.2",
+    "expo-sharing": "~14.0.7",
     "expo-web-browser": "~14.2.0",
     "fuse.js": "^7.1.0",
     "react": "19.0.0",
