--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~54.0.10",
     "expo-blur": "~15.0.7",
     "expo-checkbox": "~5.0.7",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~18.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
