--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-intent-launcher": "~13.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "~18.0.7",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
