--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "patch-package": "^8.0.0",
     "typescript": "~5.9.2"
   },
+  "overrides": {
+    "node-forge": "^1.3.2"
+  },
   "private": true
 }
