--- a/app.json
+++ b/app.json
@@ -30,13 +30,18 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "imageWidth": 300,
+          "imageWidth": 1024,
           "resizeMode": "contain",
-          "backgroundColor": "#2C2546"
+          "backgroundColor": "#0C1636"
         }
       ],
       "expo-secure-store"
     ],
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0C1636"
+    },
     "experiments": {
       "typedRoutes": true
     },
