--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "typescript": "~5.9.2"
   },
   "overrides": {
-    "node-forge": "^1.3.2"
+    "node-forge": "1.3.2"
   },
   "private": true
 }
