--- a/app.json
+++ b/app.json
@@ -35,7 +35,13 @@
           "backgroundColor": "#2C2546"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Permitir que SISA acceda a tu ubicación para posicionar direcciones de empresas en el mapa."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
