--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "^8.4.0",
     "@react-native-community/netinfo": "~11.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "~54.0.33",
+    "expo": "^51.0.39",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
     "expo-checkbox": "~5.0.8",
@@ -50,7 +50,7 @@
     "fuse.js": "^7.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.84.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-viewing": "^0.2.2",
@@ -64,8 +64,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
+    "eslint": "^10.0.1",
+    "eslint-config-expo": "^6.0.0",
     "patch-package": "^8.0.0",
     "typescript": "~5.9.2"
   },
