--- a/app.json
+++ b/app.json
@@ -41,7 +41,9 @@
         {
           "locationWhenInUsePermission": "Permitir que SISA acceda a tu ubicación para posicionar direcciones de empresas en el mapa."
         }
-      ]
+      ],
+      "expo-video",
+      "expo-audio"
     ],
     "experiments": {
       "typedRoutes": true
