--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~54.0.33",
+    "expo-audio": "~1.1.1",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
     "expo-checkbox": "~5.0.8",
